# hotfilm

./: .gitignore  Changelog.md  Install.md  LabJackU6.md  Processing.md  Python-Environment.md  README.md  SConstruct  Testing.md  app_hotfilm.py  calibrate_hotfilm.py  dump_hotfilm.py  empty-files.txt  hotfilm.cc  hotfilm.h  hotfilm.py  hotfilm.service  hotfilm.xml  hotfilm_calibration.ipynb  hotfilm_dataset.py  isfs_dataset.py  labjack_t7.py  pyproject.toml  read_winds.py  requirements.txt  run_dates.sh  run_hotfilm.sh  test_dump_hotfilm.py  test_hotfilm_dataset.py  test_isfs_dataset.py  test_read_winds.py  test_t7.cc
.github/workflows/: python-app.yml
docs/: Calibration.md  Data-Acquisition.md  Processing.md  Sampling4K.md
hotfilm/: __init__.py  calibrate_hotfilm.py  hotfilm_calibration.py  hotfilm_dataset.py  hotfilm_wind_speed_dataset.py  isfs_dataset.py  outout_path.py  output_path.py  read_hotfilm.py  time_formatter.py  utils.py
labjack/: labjack_t7.py  ljm_auto_ips.json
src/: .gitignore  hotfilm.cc  hotfilm.service
tests/: test_dump_hotfilm.py  test_hotfilm_dataset.py  test_hotfilm_wind_speed.py  test_isfs_dataset.py  test_utils.py
tests/baseline/: channel2_20230920_005950_000.nc  isfs_20230920_180000.nc
tests/test_data/: isfs_m2hats_qc_hr_inst_uvw_20230804_183000.nc  isfs_m2hats_qc_hr_inst_uw_20230804_183000.nc  u_2m_t0_20230804_160000.nc
