
[project]
name = "isfs-hotfilm"
version = "0.0.1"
requires-python = ">= 3.10"
description = "ISFS hot film anemometer data processing"
readme = "README.md"
license = {text = "MIT License"}
authors = [
  {name = "Gary Granger", email = "granger@ucar.edu"},
]

dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "netCDF4",
    "matplotlib",
    "pandas",
    "bokeh",
    "pytest"
]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [ "." ]
